--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="sytle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="card">
     <div class="search">
-        <input type="text" placeholder="enter city name" spellcheck="false">
-        <button><img src="images/search.png"></button>
+        <input type="text" placeholder="Enter city name" spellcheck="false">
+        <div>  <button><img src="images/search.png"></button></div>
     </div>
 
     <div class="error">
